Updated table documentation and fixed issue of spacing between table cells

--- a/app/scss/_tables.scss
+++ b/app/scss/_tables.scss
@@ -4,6 +4,8 @@
 
 table {
   background-color: $table-bg;
+  border-spacing: 0;
+  border-collapse: collapse;
 
   caption {
     padding-top: $table-cell-padding;
